--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,16 +26,8 @@ jobs:
         run: dotnet restore
       - name: build
         run: dotnet build --no-restore
-      - name: Unit tests with code coverage
-        run: |
-          dotnet test \
-            --no-restore \
-            --no-build \
-            --logger trx \
-            --results-directory "TestResults-${{ matrix.dotnet-version }}" \
-            /p:CollectCoverage=true \
-            /p:CoverletOutput=TestResults-${{ matrix.dotnet-version }}/ \
-            /p:CoverletOutputFormat=cobertura
+      - name: Unit Tests
+        run: dotnet test --no-restore --no-build --logger trx --results-directory "TestResults-${{ matrix.dotnet-version }}"
       - name: Upload dotnet test results
         uses: actions/upload-artifact@v4
         with:
@@ -43,10 +35,3 @@ jobs:
           path: TestResults-${{ matrix.dotnet-version }}
         # Use always() to always run this step to publish test results when there are test failures
         if: ${{ always() }}
-      - name: Generate coverage badge
-        run: |
-          dotnet tool install -g dotnet-reportgenerator-globaltool
-          reportgenerator \
-            -reports:TestResults-${{ matrix.dotnet-version }}/coverage.cobertura.xml \
-            -targetdir:coveragereport \
-            -reporttypes:Badges
