--- a/tests/UnitTests/UnitTests.csproj
+++ b/tests/UnitTests/UnitTests.csproj
@@ -20,4 +20,16 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ApplicationCore\Domain\Problems\Languages\" />
+    <Folder Include="ApplicationCore\Domain\Problems\ProblemsSetups\" />
+    <Folder Include="ApplicationCore\Domain\Problems\TestSuites\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\ApplicationCore\ApplicationCore.csproj" />
+    <ProjectReference Include="..\..\src\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\..\src\PublicApi\PublicApi.csproj" />
+  </ItemGroup>
+
 </Project>
