--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -55,6 +55,7 @@ jobs:
             /k:"algowars_server" `
             /o:"algowars" `
             /d:sonar.token="$env:SONAR_TOKEN"
+            /d:sonar.cs.cobertura.reportsPaths="TestResults-*/**/coverage.cobertura.xml"
 
           dotnet build
 
