--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -1,63 +1,52 @@
-name: SonarQube
+name: ci-sonar
 
 on:
+  pull_request:
+    branches:
+      - master
   push:
     branches:
       - master
-  pull_request:
-    types: [opened, synchronize, reopened]
 
 jobs:
   build:
-    name: Build and analyze
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        dotnet-version: ['10.x.x']
 
     steps:
-      - name: Set up JDK 17
+      - uses: actions/checkout@v5
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: ${{ matrix.dotnet-version }}
+
+      - name: Setup JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: zulu
 
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Cache SonarQube packages
-        uses: actions/cache@v4
-        with:
-          path: ~\sonar\cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-
-      - name: Cache SonarQube scanner
-        id: cache-sonar-scanner
-        uses: actions/cache@v4
-        with:
-          path: ${{ runner.temp }}\scanner
-          key: ${{ runner.os }}-sonar-scanner
-          restore-keys: ${{ runner.os }}-sonar-scanner
-
-      - name: Install SonarQube scanner
-        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-        shell: powershell
+      - name: Install SonarScanner
         run: |
-          New-Item -Path "${{ runner.temp }}\scanner" -ItemType Directory -Force
-          dotnet tool update dotnet-sonarscanner --tool-path "${{ runner.temp }}\scanner"
+          dotnet tool update --global dotnet-sonarscanner
+          echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
-      - name: Build and analyze
-        shell: powershell
+      - name: Run SonarScanner and tests
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          ${{ runner.temp }}\scanner\dotnet-sonarscanner begin `
-            /k:"algowars_server" `
-            /o:"algowars" `
-            /d:sonar.token="$env:SONAR_TOKEN" `
-            /d:sonar.cs.cobertura.reportsPaths="TestResults-*/**/coverage.cobertura.xml"
+          dotnet-sonarscanner begin \
+            /k:"algowars_server" \
+            /o:"algowars" \
+            /d:sonar.token="$SONAR_TOKEN" \
+            /d:sonar.cs.cobertura.reportsPaths="TestResults/**/coverage.cobertura.xml"
 
+          dotnet restore
           dotnet build
+          dotnet test --collect:"XPlat Code Coverage" --logger trx --results-directory TestResults
 
-          ${{ runner.temp }}\scanner\dotnet-sonarscanner end `
-            /d:sonar.token="$env:SONAR_TOKEN"
+          dotnet-sonarscanner end /d:sonar.token="$SONAR_TOKEN"
