--- a/tests/UnitTests/UnitTests.csproj
+++ b/tests/UnitTests/UnitTests.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <Folder Include="ApplicationCore\Domain\Problems\ProblemsSetups\" />
     <Folder Include="ApplicationCore\Domain\Problems\TestSuites\" />
+    <Folder Include="PublicApi\" />
   </ItemGroup>
 
   <ItemGroup>
