--- a/src/PublicApi/appsettings.Development.json
+++ b/src/PublicApi/appsettings.Development.json
@@ -4,5 +4,24 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Auth0": {
+    "Audience": "",
+    "Domain": "",
+    "Management": {
+      "ClientId": ""
+    }
+  },
+  "Cors": {
+    "AllowedOrigins": [ "http://localhost:3000" ]
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "ExecutionEngines": {
+    "Judge0": {
+      "Enabled": false,
+      "RunWorker": true
+    }
   }
 }
