Update a bunch of stuff

--- a/src/PublicApi/appsettings.Development.json
+++ b/src/PublicApi/appsettings.Development.json
@@ -21,7 +21,13 @@
   "ExecutionEngines": {
     "Judge0": {
       "Enabled": false,
-      "RunWorker": true
+      "RunWorker": true,
+      "BaseUrl": "",
+      "ApiKey": "",
+      "Host": "",
+      "ShouldWait": false,
+      "IsEncoded": true,
+      "DefaultTimeoutInSeconds":  10
     }
   }
 }
