Add submission outbox entities

--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -21,4 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ApplicationCore\ApplicationCore.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Persistence\Entities\NewFolder\" />
+  </ItemGroup>
 </Project>
