--- a/.github/workflows/ci-sonar.yml
+++ b/.github/workflows/ci-sonar.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        dotnet-version: ['10.x.x']
+        dotnet-version: ["10.x.x"]
 
     steps:
       - uses: actions/checkout@v5
@@ -47,6 +47,12 @@ jobs:
 
           dotnet restore
           dotnet build
-          dotnet test --collect:"XPlat Code Coverage" --logger trx --results-directory TestResults
+          dotnet test \
+            --no-build \
+            --results-directory TestResults \
+            /p:CollectCoverage=true \
+            /p:CoverletOutput=TestResults/ \
+            /p:CoverletOutputFormat=cobertura \
+            /p:Exclude="[*.Tests]*"
 
           dotnet-sonarscanner end /d:sonar.token="$SONAR_TOKEN"
