--- a/.github/workflows/sonar-scan.yml
+++ b/.github/workflows/sonar-scan.yml
@@ -41,15 +41,12 @@ jobs:
         run: |
           New-Item -Path ${{ runner.temp }}\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path ${{ runner.temp }}\scanner
-
       - name: Begin SonarQube analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          $scanner = "${{ runner.temp }}\scanner\dotnet-sonarscanner"
-          $scanner begin /k:"algowars_server" /o:"algowars" /d:sonar.login=$env:SONAR_TOKEN /d:sonar.cs.vstest.reportsPaths="../../TestResults/*.trx"
-
+          ${{ runner.temp }}\scanner\dotnet-sonarscanner begin /k:"algowars_server" /o:"algowars" /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
       - name: Restore
         run: dotnet restore
 
@@ -59,12 +56,10 @@ jobs:
       - name: Run tests
         shell: powershell
         run: |
-          dotnet test tests/UnitTests --no-build --collect:"XPlat Code Coverage" --results-directory ../../TestResults
-
+          dotnet test --no-restore --no-build --collect:"XPlat Code Coverage" --logger trx --results-directory "TestResults"
       - name: End SonarQube analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          $scanner = "${{ runner.temp }}\scanner\dotnet-sonarscanner"
-          $scanner end /d:sonar.login=$env:SONAR_TOKEN
+          ${{ runner.temp }}\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
