--- a/.github/workflows/sonar-scan.yml
+++ b/.github/workflows/sonar-scan.yml
@@ -50,3 +50,9 @@ jobs:
           dotnet test --collect:"XPlat Code Coverage" --logger trx --results-directory ../../TestResults
 
           dotnet-sonarscanner end /d:sonar.token="$SONAR_TOKEN"
+      - name: Upload dotnet test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: dotnet-results
+          path: TestResults
+        if: ${{ always() }}
