--- a/.github/workflows/sonar-scan.yml
+++ b/.github/workflows/sonar-scan.yml
@@ -47,7 +47,7 @@ jobs:
 
           dotnet restore
           dotnet build
-          dotnet test --collect:"XPlat Code Coverage" --logger trx --results-directory ../../TestResults
+          dotnet test --collect:"XPlat Code Coverage" --logger trx --results-directory TestResults
 
           dotnet-sonarscanner end /d:sonar.token="$SONAR_TOKEN"
       - name: Upload dotnet test results
