--- a/src/PublicApi/appsettings.Development.json
+++ b/src/PublicApi/appsettings.Development.json
@@ -20,8 +20,7 @@
   },
   "ExecutionEngines": {
     "Judge0": {
-      "Enabled": false,
-      "RunWorker": true,
+      "Enabled": true,
       "BaseUrl": "",
       "ApiKey": "",
       "Host": "",
