--- a/src/PublicApi/appsettings.Development.json
+++ b/src/PublicApi/appsettings.Development.json
@@ -28,5 +28,15 @@
       "IsEncoded": true,
       "DefaultTimeoutInSeconds": 10
     }
+  },
+  "BackgroundJobs": {
+    "SubmissionPoller": {
+      "Enabled": false,
+      "IntervalSeconds": 5
+    },
+    "SubmissionExecutor": {
+      "Enabled": false,
+      "IntervalSeconds": 10
+    }
   }
 }
