--- a/src/PublicApi/appsettings.json
+++ b/src/PublicApi/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BackgroundJobs": {
+    "SubmissionPoller": {
+      "Enabled": true,
+      "IntervalSeconds": 5
+    },
+    "SubmissionExecutor": {
+      "Enabled": true,
+      "IntervalSeconds": 10
+    }
+  }
 }
