--- a/src/ApplicationCore/ApplicationCore.csproj
+++ b/src/ApplicationCore/ApplicationCore.csproj
@@ -12,4 +12,7 @@
     <PackageReference Include="MediatR" Version="14.0.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Queries\Submissions\NewFolder\" />
+  </ItemGroup>
 </Project>
