Setting up more submission related code

--- a/src/PublicApi/appsettings.json
+++ b/src/PublicApi/appsettings.json
@@ -8,11 +8,11 @@
   "AllowedHosts": "*",
   "BackgroundJobs": {
     "SubmissionPoller": {
-      "Enabled": true,
+      "Enabled": false,
       "IntervalSeconds": 5
     },
     "SubmissionExecutor": {
-      "Enabled": true,
+      "Enabled": false,
       "IntervalSeconds": 10
     }
   }
