Update a lot more stuff

--- a/src/PublicApi/appsettings.Development.json
+++ b/src/PublicApi/appsettings.Development.json
@@ -31,11 +31,11 @@
   },
   "BackgroundJobs": {
     "SubmissionPoller": {
-      "Enabled": false,
+      "Enabled": true,
       "IntervalSeconds": 5
     },
     "SubmissionExecutor": {
-      "Enabled": false,
+      "Enabled": true,
       "IntervalSeconds": 10
     }
   }
