Adding submission initializer

--- a/src/PublicApi/appsettings.Development.json
+++ b/src/PublicApi/appsettings.Development.json
@@ -29,5 +29,19 @@
       "IsEncoded": true,
       "DefaultTimeoutInSeconds": 10
     }
+  },
+  "BackgroundJobs": {
+    "SubmissionInitializer": {
+      "Enabled": false,
+      "IntervalSeconds": 2
+    },
+    "SubmissionPoller": {
+      "Enabled": false,
+      "IntervalSeconds": 2
+    },
+    "SubmissionExecutor": {
+      "Enabled": false,
+      "IntervalSeconds": 2
+    }
   }
 }
