--- a/src/PublicApi/appsettings.json
+++ b/src/PublicApi/appsettings.json
@@ -5,5 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BackgroundJobs": {
+    "SubmissionInitializer": {
+      "Enabled": false,
+      "IntervalSeconds": 2
+    },
+    "SubmissionPoller": {
+      "Enabled": false,
+      "IntervalSeconds": 2
+    },
+    "SubmissionExecutor": {
+      "Enabled": false,
+      "IntervalSeconds": 2
+    }
+  }
 }
