--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: Continuous Integration
 
 on:
+  push:
+    branches:
+      - master
   pull_request:
     branches:
       - master
@@ -31,4 +34,10 @@ jobs:
         with:
           name: dotnet-results-${{ matrix.dotnet-version }}
           path: TestResults-${{ matrix.dotnet-version }}
+        if: ${{ always() }}
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          files: "TestResults-${{ matrix.dotnet-version }}/**/coverage.cobertura.xml"
+          fail_ci_if_error: false
         if: ${{ always() }}
