--- a/src/PublicApi/appsettings.Development.json
+++ b/src/PublicApi/appsettings.Development.json
@@ -13,7 +13,7 @@
     }
   },
   "Cors": {
-    "AllowedOrigins": "http://localhost:3000,https://localhost:3000"
+    "AllowedOrigins": "http://localhost:3000,http://localhost:4200"
   },
   "ConnectionStrings": {
     "DefaultConnection": ""
